--- a/TVShows/TVShows/Login/Login.storyboard
+++ b/TVShows/TVShows/Login/Login.storyboard
@@ -22,10 +22,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="750"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZx-Oe-uSb" userLabel="Container View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="658"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="697"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="kcZ-8g-Vpv" userLabel="Form Stack View">
-                                                <rect key="frame" x="20" y="0.0" width="374" height="658"/>
+                                                <rect key="frame" x="20" y="0.0" width="374" height="697"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Gp-2O-xMD" userLabel="Top view spacing">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="70"/>
@@ -38,36 +38,39 @@
                                                         <rect key="frame" x="0.0" y="104" width="374" height="80"/>
                                                     </imageView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="iDW-1J-pep" userLabel="Username Stack View">
-                                                        <rect key="frame" x="0.0" y="218" width="374" height="21"/>
+                                                        <rect key="frame" x="0.0" y="218" width="374" height="41"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="bottomLeft" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" text="Username" clearsOnBeginEditing="YES" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zeZ-PF-Mc8">
-                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="20" id="L3p-Fx-McR"/>
+                                                                    <constraint firstAttribute="height" constant="40" id="L3p-Fx-McR"/>
                                                                 </constraints>
                                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <textInputTraits key="textInputTraits" keyboardAppearance="light" returnKeyType="continue" textContentType="username"/>
                                                             </textField>
                                                             <view contentMode="top" translatesAutoresizingMaskIntoConstraints="NO" id="vtS-gz-Utt">
-                                                                <rect key="frame" x="0.0" y="20" width="374" height="1"/>
+                                                                <rect key="frame" x="0.0" y="40" width="374" height="1"/>
                                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="Cae-fK-HQm"/>
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="zeZ-PF-Mc8" firstAttribute="width" secondItem="iDW-1J-pep" secondAttribute="width" id="uQN-E2-kHB"/>
+                                                        </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="v1X-dV-cvA" userLabel="Password Stack View">
-                                                        <rect key="frame" x="0.0" y="273" width="374" height="21"/>
+                                                        <rect key="frame" x="0.0" y="293" width="374" height="40"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kd5-Wj-aKG">
-                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="39"/>
                                                                 <subviews>
                                                                     <textField opaque="NO" contentMode="bottomLeft" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" text="Password" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KKC-iV-2KE">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="349" height="20"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="349" height="39"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="height" constant="20" id="zVs-4L-5N8"/>
+                                                                            <constraint firstAttribute="height" priority="999" constant="20" id="zVs-4L-5N8"/>
                                                                         </constraints>
                                                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -77,10 +80,9 @@
                                                                         </connections>
                                                                     </textField>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2j-ip-oNo">
-                                                                        <rect key="frame" x="349" y="0.0" width="25" height="20"/>
+                                                                        <rect key="frame" x="349" y="0.0" width="25" height="39"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="25" id="9jg-oh-xcP"/>
-                                                                            <constraint firstAttribute="height" constant="20" id="oIc-j0-iB5"/>
                                                                         </constraints>
                                                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <state key="normal" image="ic-hide-password">
@@ -96,16 +98,19 @@
                                                                 </constraints>
                                                             </stackView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pCP-rj-CRj">
-                                                                <rect key="frame" x="0.0" y="20" width="374" height="1"/>
+                                                                <rect key="frame" x="0.0" y="39" width="374" height="1"/>
                                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="zVx-0N-T0z"/>
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="ub8-hd-oon"/>
+                                                        </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Elj-WW-Y5e" userLabel="Remember me Stack View">
-                                                        <rect key="frame" x="0.0" y="328" width="374" height="24"/>
+                                                        <rect key="frame" x="0.0" y="367" width="374" height="24"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="topRight" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNK-jh-2J3" userLabel="RememberMe">
                                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="24"/>
@@ -133,7 +138,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="50" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBB-cb-aTq">
-                                                        <rect key="frame" x="0.0" y="386" width="374" height="55"/>
+                                                        <rect key="frame" x="0.0" y="425" width="374" height="55"/>
                                                         <color key="backgroundColor" red="1" green="0.45882352941176469" blue="0.5490196078431373" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="55" id="r4y-RP-uTC"/>
@@ -148,7 +153,7 @@
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCJ-rd-dcJ">
-                                                        <rect key="frame" x="0.0" y="475" width="374" height="20"/>
+                                                        <rect key="frame" x="0.0" y="514" width="374" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="Q1s-fH-Evs"/>
                                                         </constraints>
@@ -157,7 +162,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7k-Zw-zca">
-                                                        <rect key="frame" x="0.0" y="529" width="374" height="25"/>
+                                                        <rect key="frame" x="0.0" y="568" width="374" height="25"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="25" id="Esh-0i-pXl"/>
                                                         </constraints>
@@ -168,7 +173,7 @@
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPy-nn-9uR" userLabel="Bottom view spacing">
-                                                        <rect key="frame" x="0.0" y="588" width="374" height="70"/>
+                                                        <rect key="frame" x="0.0" y="627" width="374" height="70"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="70" id="1kC-W2-TMG"/>
@@ -178,6 +183,7 @@
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="750" id="95w-ot-bZY"/>
+                                                    <constraint firstItem="v1X-dV-cvA" firstAttribute="width" secondItem="iDW-1J-pep" secondAttribute="width" id="a6p-tm-9x2"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
