--- a/TVShows/TVShows/Show details/ShowDetails.storyboard
+++ b/TVShows/TVShows/Show details/ShowDetails.storyboard
@@ -19,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AHC-jf-5Z5">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="548.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="578.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bij-w3-9AQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="548.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="578.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icImagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="5Oc-t1-27e">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
@@ -36,8 +36,45 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bMX-xM-3Z8" userLabel="Likes Stack View">
+                                                <rect key="frame" x="0.0" y="393.5" width="414" height="25"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPe-rA-wuR" userLabel="Like Label">
+                                                        <rect key="frame" x="0.0" y="0.0" width="10.5" height="25"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vw8-Hn-CpX" userLabel="Like">
+                                                        <rect key="frame" x="15.5" y="0.0" width="25" height="25"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="25" id="ZV4-it-UPE"/>
+                                                            <constraint firstAttribute="width" constant="25" id="m54-vj-HUP"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Button" image="ic-thumbs-up"/>
+                                                        <connections>
+                                                            <action selector="postLike" destination="JsY-I2-wvw" eventType="touchUpInside" id="b6e-AD-48g"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zLd-ob-Kds" userLabel="Dislike">
+                                                        <rect key="frame" x="45.5" y="0.0" width="25" height="25"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="25" id="2MQ-hu-c1O"/>
+                                                            <constraint firstAttribute="width" constant="25" id="aFb-7U-20y"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Button" image="ic-thumbs-down"/>
+                                                        <connections>
+                                                            <action selector="postDislike:" destination="JsY-I2-wvw" eventType="touchUpInside" id="NJQ-v8-PCo"/>
+                                                        </connections>
+                                                    </button>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WcU-Nw-5uo">
+                                                        <rect key="frame" x="75.5" y="0.0" width="338.5" height="25"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KKv-MX-ym0">
-                                                <rect key="frame" x="0.0" y="393.5" width="414" height="120"/>
+                                                <rect key="frame" x="0.0" y="423.5" width="414" height="120"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="999" constant="120" id="Iin-8o-9Pd"/>
@@ -47,7 +84,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DDy-qC-Ca2">
-                                                <rect key="frame" x="0.0" y="518.5" width="414" height="30"/>
+                                                <rect key="frame" x="0.0" y="548.5" width="414" height="30"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episodes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqe-oT-5fc">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
@@ -87,7 +124,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0rY-5e-WB5">
-                                <rect key="frame" x="0.0" y="548.5" width="414" height="347.5"/>
+                                <rect key="frame" x="0.0" y="578.5" width="414" height="317.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailsTableCell" rowHeight="386" id="sRI-0q-Gju" userLabel="EpisodeList" customClass="ShowDetailsTableCell" customModule="TVShows" customModuleProvider="target">
@@ -206,6 +243,7 @@
                     <connections>
                         <outlet property="descriptionView" destination="KKv-MX-ym0" id="ZeJ-8R-XIx"/>
                         <outlet property="imageView" destination="5Oc-t1-27e" id="iko-sd-sQk"/>
+                        <outlet property="likesLabel" destination="HPe-rA-wuR" id="dN1-zw-EVl"/>
                         <outlet property="numberOfEpisodesLabel" destination="sZg-99-iwc" id="wTJ-7N-Crl"/>
                         <outlet property="tableView" destination="0rY-5e-WB5" id="gaE-Ug-CsU"/>
                         <outlet property="titleLabel" destination="uWo-xz-XAP" id="18x-re-Whu"/>
@@ -220,6 +258,8 @@
         <image name="ic-fab-button" width="68" height="74"/>
         <image name="ic-navigate-back" width="32" height="32"/>
         <image name="ic-navigation-chevron-right-medium-1" width="24" height="24"/>
+        <image name="ic-thumbs-down" width="24" height="24"/>
+        <image name="ic-thumbs-up" width="24" height="24"/>
         <image name="icImagePlaceholder" width="600" height="400"/>
     </resources>
 </document>
